shortens title of widget when minimizing it, fixes z-index issues with share bar, and removes bouncy effect on new widget buttons for min/max/collapse

--- a/src/main/webapp/js/widgets/Widget.css
+++ b/src/main/webapp/js/widgets/Widget.css
@@ -58,6 +58,11 @@
     margin-right: 4px;
 }
 
+
+.ui-dialog .ui-dialog-titlebar-maximize:hover,.ui-dialog .ui-dialog-titlebar-minimize:hover,.ui-dialog .ui-dialog-titlebar-collapse:hover {
+	margin-top: 2px;
+}
+
 .ui-dialog span{
 	margin-left : -2px;
 }
